# libzrtp

./: Makefile.am  configure.ac
include/: zrtp_config.h
src/: zrtp.c  zrtp_log.c  zrtp_protocol.c  zrtp_utils.c
test/: cipher_test.c  dh_test.c  dk_test.c  ecdh_test.c  engine_helpers.c  enrollment_test.c  hash_test.c  minor_bugs_test.c  sasrelay_test.c  srtp_replay_test.c  test_engine.c
test/cmockery/: cmockery.h
